[package]
name = "rs3a"
version = "1.0.6"
edition = "2018"
authors = ["DomesticMoth"]
description = "Lib for reading and writing 3a format"
repository = "https://github.com/DomesticMoth/rs3a"
categories = ["text-processing", "parser-implementations", "parsing"]
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
regex = "1"
lazy_static = "1.4.0"
