[package]
name = "rs3a"
version = "2.2.3"
edition = "2018"
authors = ["asciimoth"]
description = "Animated ascii art rust library"
repository = "https://github.com/asciimoth/rs3a"
documentation = "https://docs.rs/rs3a"
keywords = ["3a", "animated-ascii-art", "text", "ascii", "ascii-art"]
categories = ["encoding", "parser-implementations"]
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
ordermap = "1.1.0"

[dev-dependencies]
pretty_assertions = "1.4.1"

